<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailViewModel"
            type="com.gmail.apigeoneer.aesteroids.detail.DetailViewModel" />

        <variable
            name="asteroid"
            type="com.gmail.apigeoneer.aesteroids.data.domain.Asteroid" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#111111"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back"
                android:contentDescription="@string/back_icon" />

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="0dp"
                android:layout_height="266dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/asteroid_status_image"
                android:scaleType="centerCrop"
                app:asteroidStatusImage="@{asteroid.hazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_iv"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/isHazardous_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#766496"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                tools:text="@{asteroid.hazardous ? @string/hazardous_text : @string/not_hazardous_text}" />

            <TextView
                android:id="@+id/codename_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f5f5f5"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isHazardous_tv"
                tools:text="@{detailViewModel.selectedAsteroid.codeName}" />

            <TextView
                android:id="@+id/closeApproachDate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/close_approach_date"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codename_tv" />

            <TextView
                android:id="@+id/closeApproachDateValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/closeApproachDate_tv"
                tools:text="@{detailViewModel.selectedAsteroid.closeApproachDate}" />

            <TextView
                android:id="@+id/absMagnitude_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/absolute_magnitude"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/closeApproachDateValue_tv" />

            <TextView
                android:id="@+id/absMagnitudeValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:astronomicalUnitText="@{detailViewModel.selectedAsteroid.absMagnitude}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absMagnitude_tv"
                tools:text="16.480000" />

            <ImageView
                android:id="@+id/help_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/absMagnitudeValue_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/absMagnitude_tv"
                app:srcCompat="@drawable/ic_help"
                android:contentDescription="@string/help_info_icon" />

            <TextView
                android:id="@+id/estDiaMax_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/est_max_dia"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absMagnitudeValue_tv" />

            <TextView
                android:id="@+id/estDiaMaxValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:kmUnitText="@{detailViewModel.selectedAsteroid.estDiaMax}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estDiaMax_tv"
                tools:text="3.0063530383 km" />

            <TextView
                android:id="@+id/relativeVelocity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/relative_velocity"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estDiaMaxValue_tv" />

            <TextView
                android:id="@+id/relativeVelocityValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeVelocity_tv"
                app:velocityText="@{detailViewModel.selectedAsteroid.relativeVelocity}"
                tools:text="14.77157427 km/s" />

            <TextView
                android:id="@+id/distanceFromEarth_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/distance_from_earth"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeVelocityValue_tv" />

            <TextView
                android:id="@+id/distanceFromEarthValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:kmUnitText="@{detailViewModel.selectedAsteroid.distanceFromEarth}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distanceFromEarth_tv"
                tools:text="0.49229903 km" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>